--- a/bsm/html/bsm1.html
+++ b/bsm/html/bsm1.html
@@ -59,6 +59,6 @@
 
     <script src="../leaflet/LeafletPlayback.js"></script>
     <script src="../testdata/test.js"></script>
-    <script src="../js/bsm.js"></script>
+    <script src="../js/bsm1.js"></script>
 </body>
 </html>
