map not loading

--- a/bsm/imap/index.html
+++ b/bsm/imap/index.html
@@ -40,9 +40,9 @@
 <body>
 
 	<div id="intro-page">
-		<h1>Seidenstrasse <span id="page-loading">wird geladen</span></h1>
+		<h1>Black Soldiers Mattered <span id="page-loading">Soldier's Journey</span></h1>
 		<div class="text">
-			<p>Die Seidenstrasse ist ein Netz von Strassen, die das Mittelmeer mit Ostasien verbindet. Auf ihr brachten einst Händler Seide, Schiesspulver und Papier von China nach Europa. Wo sich ihre Karawanen durch den Staub schleppten, entstehen heute Schnellstrassen und Eisenbahnlinien. Folgen Sie Reporter Peter Gysling von Venedig nach Xi’an.</p>
+			<p>An interactive map journey of a soldiers during World War I</p>
 		</div>
 
 		<div class="social-sharing">
@@ -59,12 +59,14 @@
 
 			<div class="interactive">
 				<div class="intro">
-					Durch alle Länder
-mit Peter Gysling
-&#40;Audio&#41;				</div>
+					</div>
 
 				<div class="playback">
-					<span class="play">Play</span>
+					<span class="play">Home</span>
+					<span class="stop">Stop</span>
+				</div>
+				<div class="playback">
+					<span class="play">Search</span>
 					<span class="stop">Stop</span>
 				</div>
 			</div>
@@ -99,7 +101,7 @@ mit Peter Gysling
 
 		<a class="scroll-intro" href="#italy">
 			<span class="icon"><span class="scroll"></span></span>
-			<span class="label">Scrollen</span>
+			<span class="label">Scroll down</span>
 		</a>
 	</div>
 	
