--- a/bsm/bubbles/index.html
+++ b/bsm/bubbles/index.html
@@ -10,13 +10,14 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/bubble_chart.css">
 </head>
-<body>
+<body> 
   <div class="container">
-    <h1> <b>Induction of NC African American Soldiers</b> based on 'Entrance Status' </h1>
+    <h1>Induction of NC African American Soldiers based on 'Entrance Status'</h1>
+    <h1>We will have this same visualization for: Discharge Date, and Overseas Service Dates</h1>
     <div id="toolbar">
       <a href="#" id="all" class="button active">All of Time</a>
       <a href="#" id="year" class="button">By Year</a>
-      <a href="#" id="year" class="button">By Month</a>
+      <a href="#" id="month" class="button">By Month</a>
     </div>
     <div id="vis"></div>
 
@@ -29,11 +30,6 @@
   <script src="lib/d3.js"></script>
   <script src="src/tooltip.js"></script>
   <script src="src/bubble_chart.js"></script>
-
-  <!-- PLEASE REMOVE AFTER CLONING -->
- 
-  <!-- END REMOVE -->
-
 
 </body>
 </html>
