various bug fixes

--- a/bsm/bubbles/index.html
+++ b/bsm/bubbles/index.html
@@ -13,7 +13,7 @@
 <body> 
   <div class="container">
     <h1>Induction of NC African American Soldiers based on 'Entrance Status'</h1>
-    <h1>We will have this same visualization for: Discharge Date, and Overseas Service Dates</h1>
+    <h1 style="color:darkred;">We can have this same visualization for: Discharge Date, and Overseas Service Dates</h1>
     <div id="toolbar">
       <a href="#" id="all" class="button active">All of Time</a>
       <a href="#" id="year" class="button">By Year</a>
