--- a/bsm/bubbles/index.html
+++ b/bsm/bubbles/index.html
@@ -12,7 +12,7 @@
 </head>
 <body> 
   <div class="container">
-    <h1>Induction of NC African American Soldiers based on 'Entrance Status'</h1>
+    <h1>Induction of NC African American Soldiers based on Entrance Status</h1>
     <h1 style="color:darkred;">We can have this same visualization for: Discharge Date, and Overseas Service Dates</h1>
     <div id="toolbar">
       <a href="#" id="all" class="button active">All of Time</a>
