--- a/bsm/bubbles/index2.html
+++ b/bsm/bubbles/index2.html
@@ -12,7 +12,7 @@
 </head>
 <body> 
   <div class="container">
-    <h1>Induction of NC African American Soldiers based on Entrance Status</h1>
+    <h1>Discharge Date of NC African American Soldiers based on Entrance Status</h1>
     <!--<h1 style="color:darkred;">We can have this same visualization for: Discharge Date, and Overseas Service Dates</h1>-->
     <div id="toolbar">
       <a href="#" id="all" class="button active">All of Time</a>
@@ -26,26 +26,11 @@
       
     </div>
   </div>
-  <div class="container">
-    <h1>Discharge Date of NC African American Soldiers based on Entrance Status</h1>
-    <!--<h1 style="color:darkred;">We can have this same visualization for: Discharge Date, and Overseas Service Dates</h1>-->
-    <div id="toolbar">
-      <a href="#" id="all" class="button active">All of Time</a>
-      <a href="#" id="year" class="button">By Year</a>
-      <!--<a href="#" id="month" class="button">By Month</a>-->
-    </div>
-    <div id="vis2"></div>
-
-    <div class="footer">
-      <p>Some text and/or shortcuts here</p>
-      
-    </div>
-  </div>
 
 
   <script src="lib/d3.js"></script>
   <script src="src/tooltip.js"></script>
-  <script src="src/bubble_chart.js"></script>
+  <script src="src/bubble_chart2.js"></script>
 
 </body>
 </html>
