--- a/bsm/bubbles/index.html
+++ b/bsm/bubbles/index.html
@@ -22,25 +22,11 @@
     <div id="vis"></div>
 
     <div class="footer">
-      <p>Some text and/or shortcuts here</p>
+      <!--<p>Some text and/or shortcuts here</p>-->
       
     </div>
   </div>
-  <div class="container">
-    <h1>Discharge Date of NC African American Soldiers based on Entrance Status</h1>
-    <!--<h1 style="color:darkred;">We can have this same visualization for: Discharge Date, and Overseas Service Dates</h1>-->
-    <div id="toolbar">
-      <a href="#" id="all" class="button active">All of Time</a>
-      <a href="#" id="year" class="button">By Year</a>
-      <!--<a href="#" id="month" class="button">By Month</a>-->
-    </div>
-    <div id="vis2"></div>
 
-    <div class="footer">
-      <p>Some text and/or shortcuts here</p>
-      
-    </div>
-  </div>
 
 
   <script src="lib/d3.js"></script>
