--- a/bsm/bubbles/index2.html
+++ b/bsm/bubbles/index2.html
@@ -22,7 +22,7 @@
     <div id="vis"></div>
 
     <div class="footer">
-      <p>Some text and/or shortcuts here</p>
+      <!--<p>Some text and/or shortcuts here</p>-->
       
     </div>
   </div>
